# claude-code-notify

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Doc/: claude-notify-product-doc.md
claude_code_notify/: __main__.py  broadcast.py  config.py  hooks.py  installer.py  notifier.py  pending_tracker.py  ratelimit.py  recovery.py  routing.py  transcript_parser.py  usagelimit.py
docs/: claude-notify-product-doc.md  todo.md
docs/adr/: 0001-hook-installation-tracking.md
docs/lessons-learned/: 0001-sendmessage-untracked-background-dispatch.md  0002-stopfailure-transcript-write-race.md  0003-model-credits-error-misclassified.md  0004-stopfailure-payload-is-sufficient.md  0005-reset-timezone-and-ci-exposed-test-assumptions.md  0006-stale-reread-wallclock-anchored-reset.md
hooks/: permission_request.sh  stop.sh  stop_failure.sh
tests/: conftest.py  test_broadcast.py  test_check_route.py  test_config.py  test_hooks.py  test_install_e2e.py  test_installer.py  test_notifier.py  test_pending_tracker.py  test_ratelimit.py  test_recovery.py  test_routing.py  test_shims.py  test_transcript_parser.py  test_usagelimit.py  test_version.py
tests/fixtures/: bg_agent_completed.jsonl  bg_agent_pending.jsonl  bg_bash_ack_only.jsonl  bg_bash_completed.jsonl  foreground_only.jsonl  notif_twice.jsonl  sendmessage_ack_only.jsonl  sendmessage_completed.jsonl  (+2 more)
(+8 files in other folders)
