[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-notify"
version = "0.2.1"
description = "Telegram notifications from Claude Code hooks: turn finished, blocked, or errored."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["claude_code_notify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
